# Android-JNI-Des3CBC-pkcs5-padding

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/test_des_ede3_cbc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  utils.c  utils.h
app/src/main/java/com/example/test_des_ede3_cbc/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/test_des_ede3_cbc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
